2003-04-27 Alexander Dymo <cloudtemple@mksat.net>
    * Regexp tester now has "Edit" button that uses KRegExpEditor
    * Added free pascal oriented templates - GTK+ application and shared library
    * Implemented "Run options" (envvars, program arguments) for pascal project manager

2003-04-26 Alexander Dymo <cloudtemple@mksat.net>
    * Implemented all documented compiler options in free pascal compiler plugin.

2003-04-25 Jens Dagerbo <jens.dagerbo@swipnet.se>
    * Added KTextEditor::ConfigInterface to QEditor
    * Made changed editor settings apply to all open editors

2003-04-23 Roberto Raggi <roberto@kdevelop.org>
    * fixed the deadlock in the background parser

2003-04-23 Harald Fernengel <harry@kdevelop.org>
    * added SQL support part, including support for multiple connections,
      sending queries and browsing their results

2003-04-22 F@lk Brettschneider <falkbr@kdevelop.org>
    * compiles and works on KDE-3.0 again

2003-04-18 Alexander Dymo <cloudtemple@mksat.net>
    * Implemented Pascal language support including
      pascalsupport part, pascalproject part, filecreate templates,
      application wizard template, syntax highlighting and indentation in qeditor,
      compiler plugins for Free Pascal compiler and (very basic) for Borland Delphi Compiler.

2003-04-18 Roberto Raggi <roberto@kdevelop.org>
    * started to implement the recovery support, this is the first
      step to implement the incremental parser

2003-04-17 Roberto Raggi <roberto@kdevelop.org>
    * Reduced the size of the generated pcs database(you must regenerate your
      database using r++ to take advantage of it)
    * Added the AST node for variable function arguments
    * Added option "--fast" to the r++

2003-04-16 Roberto Raggi <roberto@kdevelop.org>
    * Implemented the support for class inheritance in the new pcs
    * Moved the c++ parser into kdevelop/lib/cppparser, so other
      projects like kate and umbrello can use it
