@@ -56,6 +56,7 @@ DebuggerConfigWidget::DebuggerConfigWidget(DebuggerPart* part, QWidget *parent, 
     breakOnLoadingLibrary_box->setChecked( DomUtil::readBoolEntry(dom, "/kdevdebugger/general/breakonloadinglibs", true));
     dbgTerminal_box->setChecked(           DomUtil::readBoolEntry(dom, "/kdevdebugger/general/separatetty", false));
     enableFloatingToolBar_box->setChecked( DomUtil::readBoolEntry(dom, "/kdevdebugger/general/floatingtoolbar", false));
+    runAppInAppDirectory_box->setChecked(  DomUtil::readBoolEntry(dom, "/kdevdebugger/general/runappinappdirectory", true));
     // ??? DomUtil::readEntry(dom, "/kdevdebugger/general/allowforcedbpset");
 
     resize(sizeHint());
@@ -77,6 +78,7 @@ void DebuggerConfigWidget::accept()
     DomUtil::writeBoolEntry(dom, "/kdevdebugger/general/breakonloadinglibs", breakOnLoadingLibrary_box->isChecked());
     DomUtil::writeBoolEntry(dom, "/kdevdebugger/general/separatetty", dbgTerminal_box->isChecked());
     DomUtil::writeBoolEntry(dom, "/kdevdebugger/general/floatingtoolbar", enableFloatingToolBar_box->isChecked());
+    DomUtil::writeBoolEntry(dom, "/kdevdebugger/general/runappinappdirectory", runAppInAppDirectory_box->isChecked());
 }
 
 }
