@@ -1,3 +1,7 @@
+2003-04-19 Amilcar Lucas <a.lucas@tu-bs.de>
+    * Made the Working Directory of the debugged executable configurable
+    (Finally you can run your application on it's directory, instead of $HOME)
+    
 2003-04-27 Alexander Dymo <cloudtemple@mksat.net>
     * Regexp tester now has "Edit" button that uses KRegExpEditor
     * Added free pascal oriented templates - GTK+ application and shared library
